--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "svetlana-phsychology",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "google-maps": "^3.2.1",
-    "node-sass": "^4.7.2",
-    "react": "^16.0.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "compile-sass": "node-sass ./src/sass/main.scss ./src/index.css -w"
-  }
+    "name": "life_coach",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "google-maps": "^3.2.1",
+        "node-sass": "^4.7.2",
+        "react": "^16.0.0",
+        "react-bootstrap": "^0.31.5",
+        "react-dom": "^16.0.0",
+        "react-redux": "^5.0.6",
+        "react-router": "^4.2.0",
+        "react-router-dom": "^4.2.2",
+        "react-scripts": "1.0.17",
+        "redux": "^3.7.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "compile-sass": "node-sass ./src/sass/main.scss ./src/index.css -w"
+    }
 }
